--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "@capacitor/core": "2.0.1",
     "@capacitor/ios": "2.0.1",
     "@ionic/pwa-elements": "^1.5.2",
+    "@ionic/react": "5.0.7",
+    "@ionic/react-router": "5.0.7",
     "node-sass": "4.13.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
     "typescript": "3.8.3"
   },
   "devDependencies": {
@@ -40,6 +44,7 @@
     "@types/node": "13.11.1",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
+    "@types/react-router-dom": "5.1.3",
     "commitizen": "4.0.4",
     "cross-env": "7.0.2",
     "cz-conventional-changelog": "3.1.0",
